--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   filebrowser:
     container_name: filebrowser
-    image: hurlenko/filebrowser
+    image: filebrowser/filebrowser
     volumes:
       - ~/:/data
     ports:
